fix: cleaned up unnecessary flex alignments

--- a/webclient/src/styles/MessageInteractions.styl
+++ b/webclient/src/styles/MessageInteractions.styl
@@ -1,2 +1,2 @@
 .message-interactions
-  display: inline-block
+  display: block
