--- a/webclient/src/styles/Messages.styl
+++ b/webclient/src/styles/Messages.styl
@@ -15,6 +15,7 @@
  ul.messages li {
    margin: 1px 0;
    display: flex;
+   align-items: center;
  }
 
  ul.messages li span {
@@ -35,5 +36,5 @@
  }
 
  ul.messages li.theirs {
-   align-items: flex-start;
+ 
  }
